Copy MIF files to simulation and synthesis directory.

--- a/sw/Makefile
+++ b/sw/Makefile
@@ -7,6 +7,12 @@ RISCV_LINK = $(RISCV_GCC) -T test.ld
 RISCV_LINK_OPTS = -nostdlib -nostartfiles
 RISCV_OBJDUMP = $(RISCV_PREFIX)objdump
 
+.PHONY: copy clean
+
+copy: leds.mif
+	cp $< ../sim/rom.mif
+	cp $< ../syn/rom.mif
+
 %.mif: %.dump
 	perl objdump2mif.pl $< > $@
 
@@ -18,6 +24,9 @@ RISCV_OBJDUMP = $(RISCV_PREFIX)objdump
 
 %.o: %.S
 	$(RISCV_GCC) $(RISCV_GCC_OPTS) -c $< -o $@
+
+%.s: %.c
+	$(RISCV_GCC) -O2 -S $<
 
 clean:
 	rm -f *.o *.elf *.dump *.mif
