--- a/sw/Makefile
+++ b/sw/Makefile
@@ -2,8 +2,8 @@
 
 RISCV_PREFIX=riscv64-unknown-elf-
 RISCV_GCC = $(RISCV_PREFIX)gcc -m32 -march=RV32IM
-RISCV_GCC_OPTS = -static
-RISCV_LINK = $(RISCV_GCC) -T test.ld
+RISCV_GCC_OPTS = -O2 -static
+RISCV_LINK = $(RISCV_GCC) -T vscale.ld
 RISCV_LINK_OPTS = -nostdlib -nostartfiles
 RISCV_OBJDUMP = $(RISCV_PREFIX)objdump
 
@@ -17,16 +17,16 @@ copy: leds.mif
 	perl objdump2mif.pl $< > $@
 
 %.dump: %.elf
-	$(RISCV_OBJDUMP) -D $< > $@
+	$(RISCV_OBJDUMP) -d $< > $@
 
-%.elf: %.o
+%.elf: %.o crt.o
 	$(RISCV_LINK) $^ -o $@ $(RISCV_LINK_OPTS)
+
+%.o: %.c
+	$(RISCV_GCC) $(RISCV_GCC_OPTS) -c $< -o $@
 
 %.o: %.S
 	$(RISCV_GCC) $(RISCV_GCC_OPTS) -c $< -o $@
-
-%.s: %.c
-	$(RISCV_GCC) -O2 -S $<
 
 clean:
 	rm -f *.o *.elf *.dump *.mif
